RESOLVED FIXED224308
Site could crash if MediaRemote framework isn't available.
https://bugs.webkit.org/show_bug.cgi?id=224308
Summary Site could crash if MediaRemote framework isn't available.
Jean-Yves Avenard [:jya]
Reported 2021-04-07 15:14:03 PDT
In some configuration where the MediaRemote framework isn't available (like BaseOS); a site using MediaSession could cause a crash.
Attachments
Patch (2.32 KB, patch)
2021-04-07 16:42 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (2.25 KB, patch)
2021-04-07 20:28 PDT, Jean-Yves Avenard [:jya]
no flags
Jean-Yves Avenard [:jya]
Comment 1 2021-04-07 16:04:40 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-04-07 16:42:28 PDT
EWS
Comment 3 2021-04-07 18:55:16 PDT
commit-queue failed to commit attachment 425453 [details] to WebKit repository. To retry, please set cq+ flag again.
Jean-Yves Avenard [:jya]
Comment 4 2021-04-07 20:28:38 PDT
EWS
Comment 5 2021-04-07 21:21:24 PDT
Committed r275651: <https://commits.webkit.org/r275651> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425472 [details].
Note You need to log in before you can comment on or make changes to this bug.