Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm
@@ -258,6 +258,9 @@ void MediaSessionManagerCocoa::removeSupportedCommand(PlatformMediaSession::Remo
 
 void MediaSessionManagerCocoa::clearNowPlayingInfo()
 {
+    if (!isMediaRemoteFrameworkAvailable())
+        return;
+
     if (canLoad_MediaRemote_MRMediaRemoteSetNowPlayingVisibility())
         MRMediaRemoteSetNowPlayingVisibility(MRMediaRemoteGetLocalOrigin(), MRNowPlayingClientVisibilityNeverVisible);
 
@@ -275,6 +278,9 @@ void MediaSessionManagerCocoa::clearNowPlayingInfo()
 
 void MediaSessionManagerCocoa::setNowPlayingInfo(bool setAsNowPlayingApplication, const NowPlayingInfo& nowPlayingInfo)
 {
+    if (!isMediaRemoteFrameworkAvailable())
+        return;
+
     if (setAsNowPlayingApplication)
         MRMediaRemoteSetCanBeNowPlayingApplication(true);
 
